# DanmakuPro

./: .gitignore  README.md  pyproject.toml
src/danmakupro/: __init__.py  asset_loader.py  burner.py  cli.py  config.py  ffmpeg_manager.py  gui.py  layout_engine.py  layout_params.py  logger_config.py  models.py  parser.py  renderer.py  utils.py
tests/: __init__.py  check_xml_fonts.py  conftest.py  test_asset_loading.py  test_font_username.py  test_layout_engine.py  test_models.py  test_parser.py
