[project]
name = "danmakupro"
version = "0.1.0"
description = "抖音直播弹幕压制工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "pyside6>=6.11.1",
    "tqdm>=4.67.3",
]

[project.scripts]
danmakupro = "danmakupro.cli:main"
danmakupro-gui = "danmakupro.gui:main"

[tool.pyright]
extraPaths = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/danmakupro"]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU hardware",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]